css/ocs.css
         {outline:1px solid red;}

        /* BOX SIZING */
		html {box-sizing:border-box; font-size:14px}
		*, *:before, *:after {box-sizing:inherit}

    body {
    margin: 0; padding:0;
    font-family: "League Spartan", Arial, Helvetica, sans-serif;
    }


/* ORIG NAV */

.topnav {
  overflow: hidden;
  background-color: #333;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #777;
  color: white;
}

.topnav .icon {
  display: none;
}
  

      /* MY NAV */
/*      .topnav {
        overflow: hidden;
        background-color: #777;
        display:flex;
        flex-direction:row;
        justify-content:space-between;
        
      }

      .topnav a {
        color: #f2f2f2;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
        font-size: 14px;
      }

      .topnav a:hover {
        background-color: #ddd;
        color: black;
      }

      .topnav a.active {
        background-color: #777;
        color: white;
      }

      .topnav .icon {
        display: none;
      } 
*/
      /* STRUCTURE */

      main {padding:0 1rem 0 1rem; max-width:37.5rem; margin:0 auto 6.25rem auto;}

      section {width:100%; display:flex; flex-direction:row; flex-wrap:wrap; justify-content:center; }

      section div {color:white; background-color:#a30046; width:9rem; margin:.4rem; padding:1.5rem 1rem 1rem 1rem; text-align:center; border-radius:1rem; text-align:center; }

      footer {background-color:#777; color:white; padding:1rem; position:relative; width:100%; bottom:0;}

      /* NAV TEST */

    #myLinks a:first-child {margin-right:20px;}
    #myLinks a {padding-top:20px; padding-bottom:20px; }
    #myLinks a:not(:first-child) {padding-top:40px;}

     /* .topnav a {display:flex; flex-direction:column;justify-items:center;}*/

      i {display:block;  }

      /* TYPE */
      .topnav h1 {display:none;}
      h2 {color:#a30046; font-size:16px;}
      h3 {color:#777; margin-top:2.5rem; font-size:24px;}
      h4 {color:#a30046; margin-top:2.5rem; font-size:18px;}
      strong{color:black; font-weight:700;}
      footer p {font-size:smaller;}
       li { margin-bottom:.5rem;}
    
      /* Maroon boxes */
      section div h5, section div p:first-child {font-size:1.9rem; line-height:2.0rem; margin:0; font-weight:600;}

      section div p {margin:.375rem;}

      /* logo */
      img[src="images/OccupiedFlooringLogo2024Rev.png"]{width:12.5rem;}

      /* Head image box */
      .headImage {height:12rem; width:100%; background-image:url(../images/ShutterstockCommercialBuilding.png); background-repeat:no-repeat; background-size:cover; overflow:hidden; background-position:center 25%;}

@media screen and (min-width: 500px) {
  html {font-size:16px;}
}

@media screen and (max-width: 800px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
  #myLinks a:not(:first-child) {padding-top:10px;}
  #myLinks a:first-child {margin-right:0;}
}

@media screen and (max-width: 800px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}
/*
      @media screen and (min-width:500px) {
        html {font-size:16px;}
      }

    @media screen and (max-width: 900px) {
      .topnav div a {display: none;}
      .topnav a.icon {
        float: right;
        display: block;
      }
      #MyLinks {flex-direction:column; align-items:left; padding-top:4rem;}
    }

    @media screen and (max-width: 900px) {
      .topnav.responsive {position: relative;}
      .topnav.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
      }
      .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
      }
    } 
*/
    /* FORMS */
    input, textarea {display:block; width:100%;}

    input, textarea, select, button {margin-bottom:.5rem; border:.06rem solid #aaa; padding:.5rem; border-radius:.25rem;}

    textarea {margin-bottom:1rem;}

    .hilight {font-size:small; color:#a30046; margin-top:0;}
    
    button[type=submit] {background-color:#a30046; color:white;}

    button[type=submit]:hover, button[type=submit]:focus, button[type=submit]:active {background-color:#333; color:white;}

    button[type=reset]:hover, button[type=submit]:focus, button[type=submit]:active {background-color:#ccc; }  

